Fix the scroll to top button overlap for small devices

--- a/style.css
+++ b/style.css
@@ -1362,10 +1362,10 @@ section {
 
 #progress {
     position: fixed;
-    bottom: 20px;
+    bottom: 2px;
     right: 10px;
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     z-index: 10;
     display: none;
     place-items: center;
@@ -1378,14 +1378,14 @@ section {
 
 #progress-value {
     display: block;
-    height: calc(100% - 15px);
-    width: calc(100% - 15px);
+    height: calc(100% - 12px);
+    width: calc(100% - 12px);
     background-color: rgb(104, 98, 232);
     background: linear-gradient(90deg, rgb(159, 157, 235) 0%, rgb(212, 153, 222) 39%, rgb(253, 199, 134) 100%);
     border-radius: 50%;
     display: grid;
     place-items: center;
-    font-size: 26px;
+    font-size: 23px;
     color: black;
 }
 
@@ -1433,7 +1433,7 @@ section {
 
 .footer-basic .social {
     text-align: center;
-    padding-bottom: 25px;
+    padding-bottom: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1461,7 +1461,7 @@ section {
 }
 
 .footer-basic .copyright {
-    margin-top: 15px;
+    /* margin-top: 15px; */
     text-align: center;
     font-size: 13px;
     color: rgb(255, 255, 255);
